--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
 
 body{
     margin: 0;
@@ -13,12 +21,13 @@ header{
     flex-direction: row;
     align-items: center;
     height: 100px;
-    border: 1px solid #3f3939;
+    border-bottom: 1px solid #3f3939;
     box-shadow: 0px 0px 5px;
 }
 header h1{
     color: #084B8A;
 }
+
 #menu{
     flex-grow: 1;
     flex-basis: 30%;
@@ -44,11 +53,60 @@ header h1{
     font-size:22px;
 }
 
-#menu a:hover{
-    background: #8d8a8a;
+#menu .item_nav:hover{
+    background: #64aac9;
     color: #000000;
+    border-radius: 5px;
 }
-.Titulo{
+
+/* ------------------------------------- CONTENIDO PAGINA INSTRUCTOR ---------------------------------------------- */
+
+.title_container{
+    font-family: 'Bebas Neue', cursive;
+    font-size: 75px;
+    margin: 30px 0;
+    text-align: center;
+    color: #084B8A;
+}
+
+.column_container_instructor{
+    display: flex;
+    justify-content: space-between;
+}
+
+.column_container{
+    width: 50%;
+}
+
+.img_column{
+    text-align: center;
+}
+
+.title_paragraph_column{
+    font-size: 40px;
+    margin: 20px 0;
+}
+
+.text_paragraph_column{
+    font-size: 20px;
+    text-align: justify;
+}
+
+.paragraph_column{
+    padding: 50px;
+    margin: auto;
+    max-width: 800px;
+}
+
+
+/* 
+
+.titulo_nav{
+    margin: 30px 0;
+    font-family: 'Bebas Neue', cursive;
+}
+
+.container_instrucor{
     text-align: center;
     background: linear-gradient(#2586af, #010a0e);
     padding: 0 1rem;
@@ -60,10 +118,9 @@ header h1{
 
 .sub{
     text-align:left;
-    padding: 0 0.5rem;
     background: #000000;
     -webkit-background-clip: text;
-    font-size: 34px;
+    font-size: 40px;
 }
   
 
@@ -85,12 +142,17 @@ header h1{
     align-items: center;
     justify-content: flex-end;
     position: absolute;
-    top: 38%;
+    top: 25%;
     right: 10%;
 }
+
+.column_info_container{
+    width: 50%;
+}
+
 
 @media only screen and (max-width: 355px) {
     .container{
         width: 100%;
-    }
-}
+    } 
+}*/
