--- a/css/Aprendizstyle.css
+++ b/css/Aprendizstyle.css
@@ -47,7 +47,7 @@ header ul li a{
     border-radius: 3px;
     text-transform: uppercase;
 }
-.items a.active, a:hover{
+.items:hover{
     background: #64aac9;
     transition: .5s;
 }
