--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,14 +1,21 @@
-body{
-    align-items: center;
-    font-size: 20px;
-}
+.form-control-dark {
+    border-color:#020202;
+  }
+  .form-control-dark:focus {
+    border-color: #020202;
+    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+  }
 
-main{
-    border-bottom: 1px solid black;
+  .text-small {
+    font-size: 100%;
+  }
+
+  .dropdown-toggle {
+    outline: 0;
+  }
+
+  main{
+    border-bottom: 1px solid #000;
     padding: 0px;
     margin: auto;
-}
-
-.titulo{
-    font-size: 35px;
-}
+  }
