prueba de push global

--- a/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.html
@@ -1,39 +1,42 @@
-<div class="navbar">
-  <ul class="nav">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/admin-perfil">Perfil</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/registro-usuarios">Registro de Usuarios</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/edicion-usuarios">Edición de Usuarios</a>
-    </li>
-    <li class="nav-item">
-      <!-- <a class="nav-link" (click)="logout()">Cerrar Sesión</a> -->
-    </li>
-  </ul>
-</div>
+<body>
 
+  <div class="navbar">
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/admin-perfil">Perfil</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/registro-usuarios">Registro de Usuarios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/edicion-usuarios">Edición de Usuarios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " (click)="logout()">Cerrar Sesión</a>
+      </li>
+    </ul>
+  </div>
 
-<div>
-  <h2>Editar Perfil de Usuario</h2>
-  <form (submit)="guardarCambios()" [formGroup]="form">
-    <label for="primerNombre">Primer Nombre:</label>
-    <input type="text" id="primerNombre" formControlName="primerNombre">
+  <div class="container">
+    <h2>Editar Perfil de Usuario</h2>
+  </div>
 
-    <label for="segundoNombre">Segundo Nombre:</label>
-    <input type="text" id="segundoNombre" formControlName="segundoNombre">
+  <div class="edit-form-container">
+    <form (submit)="guardarCambios()" [formGroup]="form" class="edit-form">
+      <label for="primerNombre">Primer Nombre:</label>
+      <input type="text" id="primerNombre" formControlName="primerNombre" required>
 
-    <label for="primerApellido">Primer Apellido:</label>
-    <input type="text" id="primerApellido" formControlName="primerApellido">
+      <label for="segundoNombre">Segundo Nombre:</label>
+      <input type="text" id="segundoNombre" formControlName="segundoNombre">
 
-    <label for="segundoApellido">Segundo Apellido:</label>
-    <input type="text" id="segundoApellido" formControlName="segundoApellido">
+      <label for="primerApellido">Primer Apellido:</label>
+      <input type="text" id="primerApellido" formControlName="primerApellido" required>
 
-    <label for="correo">Correo:</label>
-    <input type="text" id="correo" formControlName="correo">
+      <label for="segundoApellido">Segundo Apellido:</label>
+      <input type="text" id="segundoApellido" formControlName="segundoApellido" required>
 
-    <button type="submit">Guardar Cambios</button>
-  </form>
-</div>
+      <button type="submit" class="btn-primary" [disabled]="form.pristine">Guardar Cambios</button>
+    </form>
+  </div>
+
+  </body>
