--- a/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
@@ -1,1 +1,29 @@
-<p>update-password works!</p>
+<div class="navbar">
+  <ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/admin-perfil">Perfil</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/registro-usuarios">Registro de Usuarios</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/edicion-usuarios">Edición de Usuarios</a>
+    </li>
+    <li class="nav-item">
+      <!-- <a class="nav-link " (click)="logout()">Cerrar Sesión</a> -->
+    </li>
+  </ul>
+</div>
+
+<form [formGroup]="form">
+  <label for="passwordAnterior">Contraseña anterior:</label>
+  <input type="password" id="passwordAnterior" formControlName="passwordAnterior" required>
+
+  <label for="nuevaPassword">Nueva contraseña:</label>
+  <input type="password" id="nuevaPassword" formControlName="nuevaPassword" required>
+
+  <label for="confirmarPassword">Confirmar contraseña:</label>
+  <input type="password" id="confirmarPassword" formControlName="confirmarPassword" required>
+
+  <button (click)="cambiarContrasena()">Cambiar Contraseña</button>
+</form>
