se crea la funcion de cambiar contraseña, verifica contraseña anterios, visualiza nueva contraseña y actualiza en la base de datos en caso de que las contraseñas sean correctas, falta darle estilos

--- a/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
@@ -10,7 +10,7 @@
       <a class="nav-link" routerLink="/edicion-usuarios">Edición de Usuarios</a>
     </li>
     <li class="nav-item">
-      <!-- <a class="nav-link " (click)="logout()">Cerrar Sesión</a> -->
+      <a class="nav-link " (click)="logout()">Cerrar Sesión</a>
     </li>
   </ul>
 </div>
