--- a/sextoTrimestre/proyecto/src/app/components/marlon/cambiar-password/cambiar-password.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/cambiar-password/cambiar-password.component.html
@@ -40,21 +40,23 @@
         </div>
     </div>
 </header>
-      <div class="perfil-detalle">
-        <h1 class="display-4">Tu Perfil </h1>
-        <div class="container">
-          <div class="container-user">
-              <img src="assets/imagenes/perfil_sena.png" alt="Imagen" class="card-img-top small-centered">  
-        <div id="perfil" class="information">
-          <p class="font-weight-bold">Primer Nombre: <span id="primerNombre">{{ userData.primer_nombre }}</span></p>
-          <p class="font-weight-bold">Segundo Nombre: <span id="segundoNombre">{{ userData.segundo_nombre }}</span></p>
-          <p class="font-weight-bold">Primer Apellido: <span id="primerApellido">{{ userData.primer_apellido }}</span></p>
-          <p class="font-weight-bold">Segundo Apellido: <span id="segundoApellido">{{ userData.segundo_apellido }}</span></p>
-          <p class="font-weight-bold">Ficha: <span id="ficha">{{ userData.ficha }}</span></p>
-          <p class="font-weight-bold">Correo: <span id="correo">{{ userData.correo }}</span></p>
-        </div>
-        <button class="button1" (click)="editarInformacion()">Editar</button>
-        <button class="button2" [routerLink]="['/cambiar-contrasena']">Cambiar contraseña</button>
-      </div>
+<div class="perfil-detalle">
+  <h2>Cambiar Contraseña</h2>
+  <form [formGroup]="cambiarContrasenaForm" (ngSubmit)="cambiarContrasena()">
+    <div class="form-group">
+      <label for="contrasenaAntigua">Contraseña Antigua</label>
+      <input type="password" class="form-control" id="contrasenaAntigua" formControlName="contrasenaAntigua" required>
     </div>
-  </div>
+    <div class="form-group">
+      <label for="contrasenaNueva">Contraseña Nueva</label>
+      <input type="password" class="form-control" id="contrasenaNueva" formControlName="contrasenaNueva" required>
+    </div>
+    <div class="form-group">
+      <label for="confirmarContrasena">Confirmar Contraseña</label>
+      <input type="password" class="form-control" id="confirmarContrasena" formControlName="confirmarContrasena" required>
+    </div>
+    <div class="alert alert-danger" *ngIf="mensaje">{{ mensaje }}</div>
+    <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
+  </form>
+</div>
+</body>
