--- a/sextoTrimestre/proyecto/src/app/components/marlon/editar-perfil/editar-perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/editar-perfil/editar-perfil.component.html
@@ -40,21 +40,34 @@
         </div>
     </div>
 </header>
-      <div class="perfil-detalle">
-        <h1 class="display-4">Tu Perfil </h1>
-        <div class="container">
-          <div class="container-user">
-              <img src="assets/imagenes/perfil_sena.png" alt="Imagen" class="card-img-top small-centered">  
-        <div id="perfil" class="information">
-          <p class="font-weight-bold">Primer Nombre: <span id="primerNombre">{{ userData.primer_nombre }}</span></p>
-          <p class="font-weight-bold">Segundo Nombre: <span id="segundoNombre">{{ userData.segundo_nombre }}</span></p>
-          <p class="font-weight-bold">Primer Apellido: <span id="primerApellido">{{ userData.primer_apellido }}</span></p>
-          <p class="font-weight-bold">Segundo Apellido: <span id="segundoApellido">{{ userData.segundo_apellido }}</span></p>
-          <p class="font-weight-bold">Ficha: <span id="ficha">{{ userData.ficha }}</span></p>
-          <p class="font-weight-bold">Correo: <span id="correo">{{ userData.correo }}</span></p>
+<div class="perfil-detalle">
+    <h4 class="display-4">Editar Perfil de Usuario</h4>
+    <form [formGroup]="form" (ngSubmit)="guardarCambios()">
+        <div class="form-group">
+            <label for="primerNombre">Primer Nombre:</label>
+            <input type="text" id="primerNombre" formControlName="primerNombre" class="form-control">
         </div>
-        <button class="button1" (click)="editarInformacion()">Editar</button>
-        <button class="button2" [routerLink]="['/cambiar-contrasena']">Cambiar contraseña</button>
-      </div>
-    </div>
-  </div>
+
+        <div class="form-group">
+            <label for="segundoNombre">Segundo Nombre:</label>
+            <input type="text" id="segundoNombre" formControlName="segundoNombre" class="form-control">
+        </div>
+
+        <div class="form-group">
+            <label for="primerApellido">Primer Apellido:</label>
+            <input type text id="primerApellido" formControlName="primerApellido" class="form-control">
+        </div>
+
+        <div class="form-group">
+            <label for="segundoApellido">Segundo Apellido:</label>
+            <input type="text" id="segundoApellido" formControlName="segundoApellido" class="form-control">
+        </div>
+
+        <div class="form-group">
+            <label for="correo">Correo:</label>
+            <input type="text" id="correo" formControlName="correo" class="form-control" [disabled]="true">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+    </form>
+</div>
