--- a/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
@@ -15,15 +15,22 @@
   </ul>
 </div>
 
-<form [formGroup]="form">
-  <label for="passwordAnterior">Contraseña anterior:</label>
-  <input type="password" id="passwordAnterior" formControlName="passwordAnterior" required>
+<h2>Cambiar Contraseña</h2>
+<div class="custom-form-container">
 
-  <label for="nuevaPassword">Nueva contraseña:</label>
-  <input type="password" id="nuevaPassword" formControlName="nuevaPassword" required>
+  <form [formGroup]="form">
+      <label for="passwordAnterior">Contraseña anterior:</label>
+      <input type="password" id="passwordAnterior" formControlName="passwordAnterior" required>
 
-  <label for="confirmarPassword">Confirmar contraseña:</label>
-  <input type="password" id="confirmarPassword" formControlName="confirmarPassword" required>
+      <label for="nuevaPassword">Nueva contraseña:</label>
+      <input type="password" id="nuevaPassword" formControlName="nuevaPassword" required>
+      <div *ngIf="form?.get('nuevaPassword')?.hasError('minlength')">
+          La contraseña debe tener al menos 8 caracteres.
+      </div>
 
-  <button (click)="cambiarContrasena()">Cambiar Contraseña</button>
-</form>
+      <label for="confirmarPassword">Confirmar contraseña:</label>
+      <input type="password" id="confirmarPassword" formControlName="confirmarPassword" required>
+
+      <button (click)="cambiarContrasena()" class="custom-button">Cambiar Contraseña</button>
+  </form>
+</div>
