queda en total funcionamiento el componente nav para todas las vistas, el componente registros-admin funciona perfectamente y cree el componente modificar-usuarios, trabajare en este

--- a/sextoTrimestre/proyecto/src/app/components/sergio/admin-perfil/admin-perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/admin-perfil/admin-perfil.component.html
@@ -1,20 +1,5 @@
 <body>
-  <div class="navbar">
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/admin-perfil">Perfil</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/registro-usuarios">Registro de Usuarios</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/edicion-usuarios">Edición de Usuarios</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " (click)="logout()">Cerrar Sesión</a>
-      </li>
-    </ul>
-  </div>
+  <app-nav></app-nav>
 
   <div class="container">
     <div class="container-user">
