--- a/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.scss
@@ -49,7 +49,7 @@ body {
   width: 400px; /* Ancho del contenedor del formulario */
   margin: 0 auto; /* Centra horizontalmente el contenedor del formulario */
   border: 1px solid #ccc; /* Borde gris */
-  padding: 20px;
+  padding: 0 20px 20px;
   border-radius: 4px;
 }
 
