--- a/sextoTrimestre/proyecto/src/app/components/sergio/nav/nav.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/nav/nav.component.html
@@ -9,7 +9,7 @@
       <a class="nav-link" routerLink="/admin-perfil">Perfil</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/registro-usuarios">Registro de Usuarios</a>
+      <a class="nav-link" routerLink="/registros-admin">Registro de Usuarios</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/edicion-usuarios">Edición de Usuarios</a>
