--- a/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
@@ -1,22 +1,8 @@
-<div class="navbar">
-  <ul class="nav">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/admin-perfil">Perfil</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/registro-usuarios">Registro de Usuarios</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/edicion-usuarios">Edición de Usuarios</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link " (click)="logout()">Cerrar Sesión</a>
-    </li>
-  </ul>
-</div>
-
-<h2>Cambiar Contraseña</h2>
+<app-nav></app-nav>
+<br>
 <div class="custom-form-container">
+
+  <h2>Cambiar Contraseña</h2>
 
   <form [formGroup]="form">
       <label for="passwordAnterior">Contraseña anterior:</label>
