--- a/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.html
@@ -1,27 +1,11 @@
 <body>
 
-  <div class="navbar">
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/admin-perfil">Perfil</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/registro-usuarios">Registro de Usuarios</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/edicion-usuarios">Edición de Usuarios</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " (click)="logout()">Cerrar Sesión</a>
-      </li>
-    </ul>
-  </div>
-
-  <div class="container">
-    <h2>Editar Perfil de Usuario</h2>
-  </div>
+  <app-nav></app-nav>
 
   <div class="edit-form-container">
+
+    <h2 class="my-4">Editar Perfil de Usuario</h2>
+
     <form (submit)="guardarCambios()" [formGroup]="form" class="edit-form">
       <label for="primerNombre">Primer Nombre:</label>
       <input type="text" id="primerNombre" formControlName="primerNombre" required>
