--- a/sextoTrimestre/proyecto/src/app/components/marlon/editar-perfil/editar-perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/editar-perfil/editar-perfil.component.html
@@ -41,7 +41,7 @@
     </div>
 </header>
 <div class="perfil-detalle">
-    <h4 class="display-4">Editar Perfil de Usuario</h4>
+    <h4 class="display-4">Editar Perfil</h4>
     <form [formGroup]="form" (ngSubmit)="guardarCambios()">
         <div class="form-group">
             <label for="primerNombre">Primer Nombre:</label>
