--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
@@ -6,12 +6,14 @@
 
 
 .btn-primary {
+    margin: 10px;
     background-color: #008a88;
     border-color: #008a88;
 }
 
 
 .btn-success, .btn-secondary {
+    margin: 10px;
     background-color: #008a88;
     border-color: #008a88;
 }
