--- a/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.html
@@ -1,52 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACANNER</title>
-    <link rel="icon" href="img\Acanner_sergio.png" type="image/x-icon" width="100">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
 <body>
-    <main>
-        <div class="container">
-            <header class="d-flex flex-wrap justify-content-center py-4 mb-4">
-            <a href="/" class="d-flex align-items-center mb-0 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <div class="container">
-                    <img src="assets/imagenes/Acanner_sergio.png" class="img-fluid" alt="Imagen" width="80">
-                </div>
-                <h1 class="titulo">ACANNER</h1>
-            </a>
-
-            <ul class="nav justify-content-end">
+    <div class="degradado"></div>
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand white-title" href="#">
+            <img src="IMG\Acanner.png" alt="Logo" width="120" height="80">
+            A C A N N E R 
+        </a>
+            
+    
+        <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/login">Login</a>
+                    <a class="nav-link black-link" class="btn btn-light" href="#">Registro</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="registro">Registro</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="#">Sobre Nosotros</a>
+                    <a class="nav-link black-link" class="btn btn-light" href="#">Login</a>
                 </li>
             </ul>
-            </header>
         </div>
-    </main>
-
-    <div class="container col-xxl-8 px-4 py-5">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-            <div class="col-10 col-sm-8 col-lg-6">
-                <img src="assets/imagenes/background_sergio.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="display-4 fw-bold lh-1 mb-3">Bienvenidos a Acanner su Planeador Academico</h1>
-                <p class="lead">Tu Sistema Web Academico, Explora tus Cursos, Anuncios y Asistencia.</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+    </nav>
+    
+    
+    
+    <main>
+        <div class="container">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-6">
+                    <h1 class="display-4 fw-bold lh-1 mb-3 text-left my-auto">Bienvenidos a Acanner, tu compañero en la planificación académica.</h1>
+                    <p class="lead text-left my-auto">Explora tus cursos, actividades, anuncios y solicita asistencia a través de nuestra plataforma web académica diseñada especialmente para la formación ADSO en el SENA, utilizando la Ficha 2558104.
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-center">
+                        <img src="IMG\background9.png" class="img-fluid" alt="Imagen" style="max-height: 400px; width: auto;">
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </div>    
+    </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
-</html>
