--- a/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.scss
@@ -1,26 +1,91 @@
-body{
-  align-items: center;
-  font-size: 20px;
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow: hidden;
 }
 
-main{
-  border-bottom: 1px solid black;
-  padding: 0px;
-  margin: auto;
+.degradado {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 70%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(5, 122, 122, 1), rgba(8, 138, 136, 0.7), rgba(5, 107, 105, 0.5), transparent);
+  z-index: -1;
 }
 
-.titulo{
-  font-size: 35px;
+@media (max-width: 767px) {
+body {
+    background: #57a7a5;; 
+}
+.degradado {
+    display: none; 
+}
+}
+.navbar-toggler {
+border: none;
+color: #0b4f6c;
 }
 
-/* Estilo para los enlaces */
-a {
-  text-decoration: none; /* Subrayado para indicar que son enlaces */
-  color: #007bff; /* Color azul por defecto para enlaces */
-  cursor: pointer; /* Cambia el cursor al pasar sobre el enlace */
+.white-title {
+  color: #fff;
 }
 
-/* Estilo para los enlaces al pasar el cursor sobre ellos */
-a:hover {
-  color: #0056b3; /* Cambia el color al pasar el cursor */
+.black-link {
+  color: #000;
+}
+
+ul{
+  margin-right: 50px;
+}
+
+
+.my-auto {
+  margin-top: 20px;
+}
+
+
+img{
+  margin-left: 10px;
+  border-radius: 30px;
+}
+
+@media (min-width: 992px) {
+main {
+    margin-top: 10vh;
+}
+}
+
+@media (max-width: 992px) {
+.navbar {
+    margin-top: 0;
+}
+}
+
+@media (max-width: 767px) {
+  .navbar-toggler {
+    position: absolute;
+    right: 15px;
+  }
+}
+
+@media (max-width: 767px) {
+  .navbar-nav {
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    margin: auto;
+    margin-right: 20px;
+  }
+  
+
+  .navbar-nav .nav-item {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 992px) {
+.img-fluid {
+    margin-top: 30px;
+}
 }
