vista aprendiz 90% funcional falta ver blog

--- a/sextoTrimestre/proyecto/src/app/components/katalina/edit-password/edit-password.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/edit-password/edit-password.component.scss
@@ -1,10 +1,15 @@
-.nombre{
+// Define styles for the ".nombre" class
+.nombre {
     font-weight: bold;
-}
-.nav-img{
+  }
+  
+  // Define styles for the ".nav-img" class
+  .nav-img {
     width: 40px;
-}
-.container {
+  }
+  
+  // Define styles for the ".container" class
+  .container {
     background-color: #fff;
     padding: 30px;
     border-radius: 8px;
@@ -16,8 +21,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-}
-button {
+  }
+  
+  // Define styles for the "button" element
+  button {
     background-color: #088a88;
     color: #fff; /* Color del texto */
     padding: 10px 20px; /* Ajusta el tamaño del botón según tus necesidades */
@@ -25,17 +32,19 @@ button {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin: 10px ;
+    margin: 10px;
+    
+    // Define styles for the "button" element when hovering
+    &:hover {
+      background-color: #2b8f8d; /* Nuevo color al pasar el mouse sobre el botón */
+    }
   }
   
-  /* Estilo de hover del botón */
-  .button:hover {
-    background-color: #159997; /* Nuevo color al pasar el mouse sobre el botón */
-  }
-
-h4 {
+  // Define styles for the "h4" element
+  h4 {
     font-weight: bold;
-    flex-grow: 15; 
-    text-align: center; 
+    flex-grow: 15;
+    text-align: center;
     color: #088a88;
-}
+  }
+  
