--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
@@ -36,6 +36,9 @@
             <li class="nav-item">
               <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
+            </li>
           </ul>
         </div>
       </div>
