v.instructor sirviendo perfil,editar y cambiar contraseña

--- a/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" routerLink="/horario">Horario</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" routerLink="/perfil"><img src="../../assets/imagenes/Perfil.png" alt="Logo de la página" width="50" height="50"></a>
+                        <a class="nav-link" routerLink="/perfil"><img src="../../assets/imagenes/perfil.png" alt="Logo de la página" width="50" height="50"></a>
                     </li>
                 </ul>
             </div>
