--- a/sextoTrimestre/proyecto/src/app/components/marlon/cambiar-password/cambiar-password.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/cambiar-password/cambiar-password.component.html
@@ -41,22 +41,23 @@
     </div>
 </header>
 <div class="perfil-detalle">
-  <h2>Cambiar Contraseña</h2>
-  <form [formGroup]="cambiarContrasenaForm" (ngSubmit)="cambiarContrasena()">
-    <div class="form-group">
-      <label for="contrasenaAntigua">Contraseña Antigua</label>
-      <input type="password" class="form-control" id="contrasenaAntigua" formControlName="contrasenaAntigua" required>
-    </div>
-    <div class="form-group">
-      <label for="contrasenaNueva">Contraseña Nueva</label>
-      <input type="password" class="form-control" id="contrasenaNueva" formControlName="contrasenaNueva" required>
-    </div>
-    <div class="form-group">
-      <label for="confirmarContrasena">Confirmar Contraseña</label>
-      <input type="password" class="form-control" id="confirmarContrasena" formControlName="confirmarContrasena" required>
-    </div>
-    <div class="alert alert-danger" *ngIf="mensaje">{{ mensaje }}</div>
-    <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
-  </form>
-</div>
+    <h2>Cambiar Contraseña</h2>
+    <form [formGroup]="form" (ngSubmit)="cambiarContrasena()">
+      <div class="form-group">
+        <label for="passwordAnterior">Contraseña Antigua</label>
+        <input type="password" class="form-control" id="passwordAnterior" formControlName="passwordAnterior" required>
+      </div>
+      <div class="form-group">
+        <label for="contrasenaNueva">Contraseña Nueva</label>
+        <input type="password" class="form-control" id="contrasenaNueva" formControlName="nuevaPassword" required>
+      </div>
+      <div class="form-group">
+        <label for="confirmarPassword">Confirmar Contraseña</label>
+        <input type="password" class="form-control" id="confirmarPassword" formControlName="confirmarPassword" required>
+      </div>
+     
+      <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
+    </form>
+  </div>
 </body>
+</html>
