--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
@@ -3,6 +3,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <img src="assets/imagenes/logo.png" class="nav-img" alt="icono">
+        <a class="nav-link nombre" href="#">A C A N N E R</a>
         <button
           class="navbar-toggler"
           type="button"
