--- a/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.html
@@ -18,10 +18,7 @@
       >
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a routerLink="/indexKatalina" class="nav-link active"  id="item"  aria-current="page">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/ver-blog" class="nav-link active" aria-current="page">Blog</a>
+            <a routerLink="/indexKatalina" class="nav-link active" aria-current="page">Inicio</a>
           </li>
           <li class="nav-item">
             <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
