--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <img src="assets/imagenes/logo.png" class="nav-img" alt="icono">
-      <a class="nav-link nombre" href="#">A C A N N E R</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -19,16 +18,13 @@
       >
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a routerLink="/indexKatalina" class="nav-link active"  id="item"  aria-current="page">Inicio</a>
+            <a routerLink="/indexKatalina" class="nav-link active" aria-current="page">Inicio</a>
           </li>
           <li class="nav-item">
             <a routerLink="/ver-blog" class="nav-link active" aria-current="page">Blog</a>
           </li>
           <li class="nav-item">
             <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/ver-actvidades" class="nav-link">Actividades</a>
           </li>
           <li class="nav-item">
             <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
@@ -43,7 +39,6 @@
               <h4>{{ activity.nombreArchivo }}</h4>
               <p>{{ activity.comentario }}</p>
               <a (click)="descargarArchivo(activity.archivoUrl)" class="btn btn-primary-ver-archivo">Ver archivo</a>
-              <button (click)="updateActivity()" class="btn btn-success">Guardar</button>
           </li>
         </ul>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
