--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.html
@@ -18,7 +18,7 @@
       >
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a routerLink="/indexKatalina" class="nav-link active"  id="item"  aria-current="page">Inicio</a>
+            <a routerLink="/indexKatalina" class="nav-link active" aria-current="page">Inicio</a>
           </li>
           <li class="nav-item">
             <a routerLink="/ver-blog" class="nav-link active" aria-current="page">Blog</a>
@@ -28,9 +28,6 @@
           </li>
           <li class="nav-item">
             <a routerLink="/ver-actvidades" class="nav-link">Actividades</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
           </li>
         </ul>
       </div>
@@ -42,9 +39,6 @@
               <h4>{{ asistencia.nombreArchivo }}</h4>
               <p>{{ asistencia.comentario }}</p>
               <a (click)="descargarArchivo(asistencia.archivoUrl)" class="btn btn-primary-ver-archivo" >Ver archivo</a>
-            <ng-template #editTemplate>
-              <button (click)="updateAsistencia()" class="btn btn-success">Guardar</button>
-            </ng-template>
           </li>
         </ul>
         
