--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
@@ -1,4 +1,4 @@
-<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <img src="assets/imagenes/logo.png" class="nav-img" alt="icono">
       <button
@@ -21,9 +21,6 @@
             <a routerLink="/indexKatalina" class="nav-link active"  id="item"  aria-current="page">Inicio</a>
           </li>
           <li class="nav-item">
-            <a routerLink="/ver-blog" class="nav-link active" aria-current="page">Blog</a>
-          </li>
-          <li class="nav-item">
             <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
           </li>
           <li class="nav-item">
@@ -38,18 +35,9 @@
   </nav>
   <h2 class="subtitulo mt-5">Noticias</h2>
   <ul class="list-group">
-      <li class="list-group-item" *ngFor="let news of newsList">
-              <h4>{{ news.titulo }}</h4>
-              <p>{{ news.contenido }}</p>
-          <ng-template #editTemplate>
-              <div class="form-group">
-                  <input [(ngModel)]="editingNews.titulo" class="form-control" />
-              </div>
-              <div class="form-group">
-                  <textarea [(ngModel)]="editingNews.contenido" class="form-control"></textarea>
-              </div>
-              <button (click)="updateNews()" class="btn btn-success">Guardar</button>
-          </ng-template>
-      </li>
-  </ul>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> -->
+    <li class="list-group-item" *ngFor="let news of newsList">
+        <ng-container>
+            <h4>{{ news.titulo }}</h4>
+            <p>{{ news.contenido }}</p>
+        </ng-container>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
