--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.html
@@ -18,13 +18,10 @@
       >
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a routerLink="/indexKatalina" class="nav-link active"  id="item"  aria-current="page">Inicio</a>
+            <a routerLink="/indexKatalina" class="nav-link active" aria-current="page">Inicio</a>
           </li>
           <li class="nav-item">
             <a routerLink="/ver-blog" class="nav-link active" aria-current="page">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
           </li>
           <li class="nav-item">
             <a routerLink="/ver-actvidades" class="nav-link">Actividades</a>
@@ -42,9 +39,6 @@
         <h4>{{ horario.nombreArchivo }}</h4>
         <p>{{ horario.comentario }}</p>
         <a (click)="descargarArchivo(horario.archivoUrl)" class="btn btn-primary-ver-archivo">Ver archivo</a>
-      <ng-template #editTemplate>
-        <button (click)="updateHorario()" class="btn btn-success">Guardar</button>
-      </ng-template>
     </li>
   </ul>
 
