listo los usuarios registrados, todo funciona correctamente

--- a/sextoTrimestre/proyecto/src/app/components/sergio/nav/nav.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/nav/nav.component.html
@@ -12,7 +12,7 @@
       <a class="nav-link" routerLink="/registros-admin">Registro de Usuarios</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/edicion-usuarios">Edición de Usuarios</a>
+      <a class="nav-link" routerLink="/modificar-usuarios">Edición de Usuarios</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
