--- a/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.scss
@@ -95,6 +95,15 @@ select {
   justify-content: space-between;
 }
 
+
+.btn-primary:hover {
+  background-color: #088a88;
+}
+
+.container .btn-primary:active {
+  background-color: #088a88;
+}
+
 @media only screen and (max-width: 1500px) {
 
   .container {
