modificaciones en el  modulo katalina

--- a/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <img src="assets/imagenes/logo.png" class="nav-img" alt="icono">
+      <img src="assets/imagenes/LOGO SIN FONDO.png" class="nav-img" alt="icono">
       <button
         class="navbar-toggler"
         type="button"
@@ -37,7 +37,7 @@
         <h1 class="display-4">Tu Perfil </h1>
         <div class="container">
           <div class="container-user">
-              <img src="assets/imagenes/perfil.png" alt="Imagen" class="card-img-top small-centered">  
+              <img src="assets/imagenes/sena.png" alt="Imagen" class="card-img-top small-centered">  
         <div id="perfil" class="information">
           <p class="font-weight-bold">Primer Nombre: <span id="primerNombre">{{ userData.primer_nombre }}</span></p>
           <p class="font-weight-bold">Segundo Nombre: <span id="segundoNombre">{{ userData.segundo_nombre }}</span></p>
