--- a/sextoTrimestre/proyecto/src/app/components/katalina/edit-perfil/edit-perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/edit-perfil/edit-perfil.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <img src="assets/imagenes/logo.png" class="nav-img" alt="icono">
+    <img src="assets/imagenes/LOGO SIN FONDO.png" class="nav-img" alt="icono">
     <button
       class="navbar-toggler"
       type="button"
