--- a/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.html
@@ -53,6 +53,17 @@
           <div *ngIf="showError" class="alert alert-danger mt-2">
             Por favor, complete todos los campos obligatorios y asegúrese de que el correo sea válido.
           </div>
+          <div *ngIf="registerForm.get('fecha_nacimiento')?.hasError('menorDe14')" class="alert alert-danger mt-2">
+            Debes ser mayor de 14 años para registrarte.
+          </div>
+
+          <div *ngIf="registerForm.get('password')?.hasError('minlength')" class="alert alert-danger mt-2">
+            La contraseña debe tener al menos 8 caracteres.
+          </div>
+
+          <div *ngIf="registroExitoso" class="alert alert-success mt-2">
+            ¡Registro exitoso!
+          </div>
 
         </div>
         <div class="row">
