--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
@@ -1,49 +1,45 @@
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="icon" type="image/png" href="assets/imagenes/logo.png">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <img src="assets/imagenes/LOGO SIN FONDO.png" class="nav-img" alt="icono">
-        <a class="nav-link nombre" href="#">A C A N N E R</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse flex-row-reverse"
-          id="navbarNavDropdown"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a routerLink="/perfil-detalle" class="nav-link active" aria-current="page">
-                  <i class="fas fa-user"></i>
-              </a>
-          </li>
-            <li class="nav-item">
-              <a routerLink="/ver-blog" class="nav-link active" aria-current="page">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/ver-actvidades" class="nav-link">Actividades</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <img src="assets/imagenes/LOGO SIN FONDO.png" class="nav-img" alt="icono">
+    <a class="nav-link nombre" href="#">A C A N N E R</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a routerLink="/perfil-detalle" class="nav-link active" aria-current="page">
+            <i class="fas fa-user"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/ver-blog" class="nav-link active" aria-current="page">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/ver-actividades" class="nav-link">Actividades</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <div class="container">
     <div class="row">
         <div class="col-12">
