--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
@@ -34,10 +34,12 @@
     </div>
   </nav>
   <h2 class="subtitulo mt-5">Noticias</h2>
-  <ul class="list-group">
-    <li class="list-group-item" *ngFor="let news of newsList">
-        <ng-container>
-            <h4>{{ news.titulo }}</h4>
-            <p>{{ news.contenido }}</p>
-        </ng-container>
+  <div>
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let news of newsList">
+          <ng-container>
+              <h4>{{ news.titulo }}</h4>
+              <p>{{ news.contenido }}</p>
+          </ng-container>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
