se hicieron cambios en el modulo katalina ya hay estilos en las vistas horario, blog y demas

--- a/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/index.katalina/index.katalina.component.html
@@ -28,7 +28,7 @@
           <a routerLink="/ver-horarios" class="nav-link">Horarios</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/ver-actividades" class="nav-link">Actividades</a>
+          <a routerLink="/ver-actvidades" class="nav-link">Actividades</a>
         </li>
         <li class="nav-item">
           <a routerLink="/ver-asistencias" class="nav-link">Asistencias</a>
