--- a/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.html
@@ -2,7 +2,7 @@
 <body>
   <div class="container">
     <div class="containerFormRegister">
-      <h2 class="title_register">¡Registrate!</h2>
+      <h2 class="title_register">¡Registro de Usuarios!</h2>
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register_form">
         <div class="row d-flex justify-content-center mx-auto">
           <div class="col-md-6 form_container">
