--- a/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/perfil/perfil.component.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/vista-instructor">Inicio</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" (click)="logout()">Cerrar Sesión</a>
+                </li>
             </ul>
         </div>
     </div>
