--- a/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACCANER</title>
     <link rel="icon" type="icon" href="../../assets/imagenes/LOGO ACANNER SIN FONDO.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
         .titulo {
             font-size: 32px;
@@ -14,22 +16,26 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+
         .subtitulo {
             font-size: 24px;
         }
+
         .descripcion {
             font-size: 18px;
         }
     </style>
 </head>
+
 <body>
     <header class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" routerLink="/marlon">
+            <a class="navbar-brand" routerLink="/vista-instructor">
                 <img src="../../assets/imagenes/LOGO SIN FONDO.png" alt="Logo de la página" width="51" height="50">
                 A C A N N E R
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -47,7 +53,8 @@
                         <a class="nav-link" routerLink="/horario">Horario</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" routerLink="/perfil"><img src="../../assets/imagenes/perfil.png" alt="Logo de la página" width="50" height="50"></a>
+                        <a class="nav-link" routerLink="/perfil"><img src="../../assets/imagenes/perfil.png"
+                                alt="Logo de la página" width="50" height="50"></a>
                     </li>
                 </ul>
             </div>
@@ -57,12 +64,19 @@
         <h1 class="titulo mt-5">BIENVENIDO INSTRUCTOR</h1>
         <h2 class="subtitulo">FORMACION ADSO</h2>
         <div class="descripcion mt-4">
-            <p>Bienvenido a ACANNER una plataforma que te va a facilitar el manejo de tu tiempo, tendrás una mejor organización en tus actividades y estamos vinculados con el SENA (SERVICIO NACIONAL DE APRENDIZAJE).</p>
+            <p>Bienvenido a ACANNER una plataforma que te va a facilitar el manejo de tu tiempo, tendrás una mejor
+                organización en tus actividades y estamos vinculados con el SENA (SERVICIO NACIONAL DE APRENDIZAJE).</p>
         </div>
         <div class="mt-4">
             <img src="../../assets/imagenes/software.png" alt="Imagen de referencia" width="400" height="300">
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-dfMOjQaDuBlqVuL2yGEG6xB4MAHg6ZScQqLQ+KH6qlw1xljDIQ6FAVfHS8ubAj4g"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
