--- a/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.html
@@ -1,7 +1,7 @@
 <body>
   <div class="degradado"></div>
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand white-title" href="#">
+    <a class="navbar-brand black-title" href="#">
       <img src="assets\imagenes\Acanner.png" alt="Logo" width="120" height="80">
       A C A N N E R
     </a>
