--- a/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.scss
@@ -5,7 +5,7 @@
     max-width: 500px;
     width: 80%;
     position: absolute;
-    top: 55%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -144,4 +144,22 @@ h1 {
     .show-menu{
       display: block;
     }
+  }
+
+  @media (max-width: 601px){
+
+    .perfil-detalle {
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      width: 80%;
+      position: absolute;
+      top: 70%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      
+  }
+  
   }
